# docker-dashboard

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker.sh  install.py  install.sh  pyproject.toml  start.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  tauri-test-action.yml  tauri.yml
config/: docker_dashboard.conf
configs/: docker_dashboard.conf  installer_config.py
docker/: Dockerfile  supervisord.conf
server/: actors.py  application.py  config.py  dependencies.py  endpoints.py  logging.py  middlewares.py  schemas.py  tasks.py
src/: application.py  config.py  data_structures.py  dependencies.py  endpoints.py  install.sh  logging.py  schemas.py  setup.py
src/client/: .gitignore  README.md  angular.json  build_linux.sh  installer.js  package-lock.json  package.json  tsconfig.json
src/client/src/: index.html  main.js  styles.scss
src/client/src-tauri/: Cargo.toml  tauri.conf.json
src/clientx/: angular.json  package.json  tsconfig.json
src/clientx/src/: styles.scss
src/server/: asgi.py  exceptions.py  handlers.py  manage.py  pytest.ini  requirements.txt  settings.py  test_requirements.txt  types.py  urls.py
src/server/api/: container.py  image.py  stats.py
src/server/containers/: __init__.py  utils.py  views.py
src/server/core/: exceptions.py  utils.py
src/server/handlers/: urls.py
src/server/images/: __init__.py  schemas.py  utils.py  views.py
src/server/models/: __init__.py  container.py  image.py  stats.py
src/server/schemas/: __init__.py  (+2 more)
(+139 files in other folders)
